<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C152D5"
    tools:context=".markscalculation">

    <EditText
        android:id="@+id/mark"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:ems="10"
        android:hint="@string/mark"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/name"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:ems="10"
        android:hint="@string/names"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/outofmark"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/outofmark"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/numofmodules"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/moduless"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="358dp"
        android:text="@string/cal" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="253dp"
        android:layout_marginLeft="253dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/cl" />

    <TextView
        android:id="@+id/result"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="569dp"
        android:layout_marginBottom="116dp" />

    <TextView
        android:id="@+id/resultavg"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="216dp" />
</RelativeLayout>